<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <PreferenceCategory android:title="@string/pref_category_behavior">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_dark_theme_key"
            android:order="200"
            android:summary="@string/pref_dark_theme_summary"
            android:title="@string/pref_dark_theme_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_share_warning_key"
            android:order="300"
            android:summary="@string/pref_share_warning_summary"
            android:title="@string/pref_share_warning_title_show" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_show_no_password_key"
            android:order="310"
            android:summary="@string/pref_show_no_password_summary"
            android:title="@string/pref_show_no_password_title" />

    </PreferenceCategory>

</PreferenceScreen>